--- a/paymentpage.css
+++ b/paymentpage.css
@@ -9,7 +9,7 @@
     width:62%;
 }
  
-#btnmakepayment
+.formakepayment
 {
     width:120px;
     height:50px;
@@ -17,7 +17,16 @@
     border-radius:5px;
     border:none;
 }
-#btnmakepayment:hover
+.formakepayment:hover
 {
-    background-color:#ff6666;
+    background-color:#e60000;   
 }
+ .nav-tabs > li.active > a, .nav-tabs > li.active > a:focus, .nav-tabs > li.active > a:hover 
+ {
+                border:none;
+
+ }
+ .nav-tabs>li>a 
+ {
+     color:white;
+ }
