--- a/MasterPage.master
+++ b/MasterPage.master
@@ -277,7 +277,7 @@
                                     <span style="font-style: oblique">Check Availebility</span>
                                 </div>
                                 <div class="col-md-6">
-                                    <asp:Button ID="Search" runat="server" Text="Search" CssClass="searchbtn" />
+                                    <asp:Button ID="Search" runat="server" Text="Search" CssClass="searchbtn" PostBackUrl="~/Rooms.aspx"/>
                                 </div>
                             </div>
                         </div>
