--- a/MasterPage.master
+++ b/MasterPage.master
@@ -78,6 +78,146 @@
                 background-color: #009973;
             }
     </style>
+    <script>
+        function name()
+        {
+            var name = document.getElementById("txtname").value;
+           
+            if (name == "") {
+                document.getElementById("nameerror").innerHTML = "Name is Empty";
+            }
+            else if(!isNaN(name))
+            {
+                document.getElementById("nameerror").innerHTML = "Name is invalid";
+            }
+            else
+            {
+                document.getElementById("nameerror").innerHTML = "";
+            }
+        }
+        function email()
+        {
+           
+            var email = document.getElementById("txtemail").value;
+            var atposition = email.indexOf("@");
+            var dotposition = email.dotposition;
+            if (email == "") {
+                document.getElementById("emailerror").innerHTML = "email is Empty";
+
+            }
+            else if (atposition < 1 || dotposition < atposition + 2 || dotposition + 2 >= email.length) {
+                document.getElementById("emailerror").innerHTML = "email is not correct";
+            }
+            else {
+                document.getElementById("emailerror").innerHTML = "";
+            }
+           
+        }
+        function password()
+        {
+            var password = document.getElementById("password").value;
+            if(password=="")
+            {
+                document.getElementById("passerror").innerHTML = "password is Empty";
+            }
+            else {
+                document.getElementById("passerror").innerHTML = "";
+            }
+        }
+        function conformpassword()
+        {
+            var password = document.getElementById("password").value;
+            var confpass = document.getElementById("passwordconfirm").value;
+            if(confpass=="")
+            {
+                document.getElementById("confpasserror").innerHTML = "confirm password is Empty";
+            }
+            else if(password!=confpass)
+            {
+                document.getElementById("confpasserror").innerHTML = " password not match";
+            }
+            else {
+                document.getElementById("confpasserror").innerHTML = "";
+            }
+        }
+        function state()
+        {
+            var state = document.getElementById("txtaddress").value;
+            if(state=="")
+            {
+                document.getElementById("stateerror").innerHTML = " state is empty";
+            }
+            else {
+                document.getElementById("stateerror").innerHTML = "";
+            }
+        }
+        function number()
+        {
+            var number = document.getElementById("txtnumber").value;
+            if(number=="")
+            {
+                document.getElementById("numbererror").innerHTML = " number is empty";
+            }
+            else if(number.length!=10)
+            {
+                document.getElementById("numbererror").innerHTML = " number is wrong";
+            }
+            else if(isNaN(number))
+            {
+                document.getElementById("numbererror").innerHTML = " enter number value only";
+            }
+            else {
+                document.getElementById("numbererror").innerHTML = "";
+            }
+        }
+        function validate() {
+          
+            name();
+            email();
+            password();
+            conformpassword();
+            state();
+            number();
+        }
+
+            function loginemail()
+        {
+           
+            var loginemail = document.getElementById("loginemail").value;
+            var atposition = loginemail.indexOf("@");
+            var dotposition = loginemail.dotposition;
+            if (loginemail == "") {
+                document.getElementById("loginemailerror").innerHTML = "email is Empty";
+
+            }
+            else if (atposition < 1 || dotposition < atposition + 2 || dotposition + 2 >= loginemail.length) {
+                document.getElementById("loginemailerror").innerHTML = "email is not correct";
+            }
+            else {
+                document.getElementById("loginemailerror").innerHTML = "";
+            }
+           
+        }
+        function loginpassword()
+        {
+            var loginpassword = document.getElementById("loginpass").value;
+            if(loginpassword=="")
+            {
+                document.getElementById("loginpasserror").innerHTML = "password is Empty";
+            }
+            else {
+                document.getElementById("loginpasserror").innerHTML = "";
+            }
+        }
+            function loginvalidate() {
+          
+            loginemail();
+            loginpassword();
+            
+        }
+        
+
+        </script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -110,7 +250,7 @@
                             </li>
                             <li><a href="gallery.aspx">Gallery</a></li>
                             <li><a href="#">Contact</a></li>
-                            <li></li>
+                            <li><a href="#"  data-toggle="modal" data-target="#myModal2">Login</a></li>
                         </ul>
 
                     </nav>
@@ -285,6 +425,114 @@
                 </div>
             </div>
         </div>
+        <div class="container">
+     <!-- Trigger the modal with a button -->
+  
+
+  <!-- Modal -->
+  <div class="modal fade" id="myModal2" role="dialog" >
+    <div class="modal-dialog">
+    
+      <!-- Modal content-->
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+         <ul class="nav nav-tabs" style="border-bottom:none;">
+    <li class="active"><a data-toggle="tab" href="#home" >Sign Up</a></li>
+    <li><a data-toggle="tab" href="#menu1">Login</a></li>
+    
+  </ul>
+
+  <div class="tab-content">
+    <div id="home" class="tab-pane fade in active">
+       <div class="row">
+        <div class="col-md-12">
+
+        <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">SIGN UP</h3>
+
+       </div>
+             <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-send"></i></span>
+            <asp:TextBox ID="txtname" runat="server" placeholder="Enter Your Name" CssClass="form-control textboxes"></asp:TextBox> 
+        <div id="nameerror" class="errormsg"></div>
+                   </div>
+        
+            
+            
+
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fa fa-send"></i></span>
+            <asp:TextBox ID="txtemail" runat="server" placeholder="Enter Your Email" CssClass="form-control textboxes"></asp:TextBox> 
+               <div id="emailerror" class="errormsg"></div>
+                 </div>
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fas fa-user"></i></span>
+            <asp:TextBox ID="txtnumber" runat="server" placeholder="Enter Your Number" CssClass="form-control  textboxes"></asp:TextBox> 
+            <div id="numbererror" class="errormsg"></div>
+                 </div>
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fas fa-key"></i></span>
+            <asp:TextBox ID="password" runat="server" placeholder="Enter Your password" CssClass="form-control  textboxes" TextMode="Password"></asp:TextBox> 
+                           <div id="passerror" class="errormsg"></div>
+                  </div>
+            <div class="input-group">
+                <span class="input-group-addon"><i class="fas fa-key"></i></span>
+            <asp:TextBox ID="passwordconfirm" runat="server" placeholder="Confirm Your password" CssClass="form-control  textboxes" TextMode="Password"></asp:TextBox> 
+                               <div id="confpasserror" class="errormsg"></div>
+                 </div>
+            <div class="input-group">
+                <asp:Button ID="btnsignup" runat="server" Text="Sign Up" CssClass="btn1"  OnClientClick="validate()" />
+            </div>
+            </div>
+           
+            
+         </div>
+     <div id="menu1" class="tab-pane fade">
+         <div class="row">
+             <div class="col-md-12">
+                 <h3 style="font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">LOGIN</h3>
+              </div>          
+              <div class="input-group">
+                <span class="input-group-addon"><i class="fas fa-user"></i></span>
+            <asp:TextBox ID="loginemail" runat="server" placeholder="Enter Your Email" CssClass="form-control  textboxes"></asp:TextBox> 
+            <div id="loginemailerror" class="errormsg"></div>
+              </div>
+            <div class="input-group" style="margin-bottom:20px;">
+                <span class="input-group-addon"><i class="fas fa-key"></i></span>
+            <asp:TextBox ID="loginpass" runat="server" placeholder="Enter Your password" CssClass="form-control  textboxes" TextMode="Password"></asp:TextBox> 
+         <div id="loginpasserror" class="errormsg"></div> 
+                 </div>
+    <asp:Button ID="btnlogin" runat="server" Text="Log In" CssClass="btn1" OnClientClick="loginvalidate()" />
+         
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="#">Forget Password ?</a>
+                </div>
+                <div class="col-md-6">
+                    <a href="#" style="margin-left:130px;">Reset Password</a>
+                </div>
+            </div>
+    
+             
+         </div>
+
+    
+    </div>
+    
+
+                          
+        </div>
+ 
+
+  </div>      
+       
+        </div>
+      
+    </div>
+  </div>
+
+  
+</div>
     </form>
 </body>
 </html>
